--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/provider": "^2.0.20",
+    "@chakra-ui/react": "^2.3.6",
     "axios": "^0.21.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
