--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@chakra-ui/provider": "^2.0.20",
-    "@chakra-ui/react": "^2.3.6",
+    "@chakra-ui/react": "^2.4.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "axios": "^0.21.1",
+    "framer-motion": "^7.6.7",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.1.0"
