--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "framer-motion": "^7.6.7",
     "next": "^12.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-spring-3d-carousel": "^1.3.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
